--- a/force-app/main/default/classes/ResourceService.cls
+++ b/force-app/main/default/classes/ResourceService.cls
@@ -7,6 +7,7 @@ public without sharing class ResourceService {
     public static final String RESOURCE_SOURCE_PLATFORM = 'Platform-TA';
     public static final String RESOURCE_SOURCE_THIRD_PARTY = '3rd Party';
     public static final String RESOURCE_STUDY_DOCUMENT = 'Study Document';
+
     public static final String X3_RD_PARTY_NOT_SOURCE = 'N/A';
     public static final String X_3PARTY_HEALTH_DAY = 'HealthDay';
     public static final String X_3PARTY_IQVIA = 'IQVIA';
@@ -166,6 +167,7 @@ public without sharing class ResourceService {
                         'RecordType.DeveloperName, ' +
                         'Content_Class__c, ' +
                         'Content_Type__c, ' +
+                        'document_type__c, ' +
                         'Image_Subtitle__c, ' +
                         'article_external_link__c, ' +
                         'Subtitle__c, ' +
