--- a/force-app/main/default/classes/ResourceTriggerHandler.cls
+++ b/force-app/main/default/classes/ResourceTriggerHandler.cls
@@ -10,7 +10,7 @@ public with sharing class ResourceTriggerHandler extends TriggerHandler {
         articleService.calculateExpirationDate(newList);
         articleService.validateUpdatedDate(newList);
         articleService.updateRemoveSharing(newList);
-        articleService.assignRecordTypeFor3dParty(newList);
+        articleService.syncContentType(newList);
         articleService.getUrlVideoFromBody(newList);
     }
 
@@ -20,7 +20,7 @@ public with sharing class ResourceTriggerHandler extends TriggerHandler {
         articleService.calculateExpirationDate(newList, (Map<Id, Resource__c>) oldMap);
         articleService.validateUpdatedDate(newList);
         articleService.updateRemoveSharing(newList, (Map<Id, Resource__c>) oldMap);
-        articleService.assignRecordTypeFor3dParty(newList);
+        articleService.syncContentType(newList);
         articleService.getUrlVideoFromBody(newList);
     }
 
