--- a/force-app/main/default/classes/Test_PSEService.cls
+++ b/force-app/main/default/classes/Test_PSEService.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-@IsTest
+@IsTest(IsParallel=true)
 private class Test_PSEService {
     
     // Define mocks: ---------------------------------------------------------------------------------------------------
