--- a/force-app/main/default/classes/Test_RRLoginRemote.cls
+++ b/force-app/main/default/classes/Test_RRLoginRemote.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-@IsTest(SeeAllData = true)
+@IsTest(IsParallel=true)
 private class Test_RRLoginRemote {
 
     @IsTest
