--- a/force-app/main/default/classes/Test_TaskEditRemote.cls
+++ b/force-app/main/default/classes/Test_TaskEditRemote.cls
@@ -2,7 +2,7 @@
  * Created by Denis on 12.04.2019.
  */
 
-@IsTest
+@IsTest(IsParallel=true)
 private class  Test_TaskEditRemote {
 
     private static Integer i = 0;
