--- a/force-app/main/default/classes/Test_TherapeuticAreaService.cls
+++ b/force-app/main/default/classes/Test_TherapeuticAreaService.cls
@@ -1,7 +1,7 @@
 /**
  * Created by Yehor Dobrovolskyi
  */
-@IsTest
+@IsTest(IsParallel=true)
 public with sharing class Test_TherapeuticAreaService {
 
     @TestSetup
