--- a/force-app/main/default/classes/Test_BaselineSurveyRemote.cls
+++ b/force-app/main/default/classes/Test_BaselineSurveyRemote.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-@IsTest
+@IsTest(IsParallel=false)
 private class Test_BaselineSurveyRemote {
     
     @IsTest
