--- a/force-app/main/default/classes/Test_CommunityFacadeRemote.cls
+++ b/force-app/main/default/classes/Test_CommunityFacadeRemote.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-@IsTest
+@IsTest(IsParallel=false)
 private class Test_CommunityFacadeRemote {
 
     static testMethod void test1() {
