--- a/force-app/main/default/classes/Test_ParticipantService.cls
+++ b/force-app/main/default/classes/Test_ParticipantService.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-@IsTest
+@IsTest(IsParallel=true)
 public class Test_ParticipantService {
 
     public class ParticipantEnrollmentServiceMock implements StubProvider {
