--- a/force-app/main/default/classes/Test_PatientDelegateRemote.cls
+++ b/force-app/main/default/classes/Test_PatientDelegateRemote.cls
@@ -1,7 +1,7 @@
 /**
  * Created by Igor Malyuta on 18.04.2019.
  */
-@IsTest
+@IsTest(IsParallel=true)
 public class Test_PatientDelegateRemote {
 
     class PatientDelegateServiceMock implements StubProvider {
