--- a/force-app/main/default/classes/Test_PatientDelegateService.cls
+++ b/force-app/main/default/classes/Test_PatientDelegateService.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-@IsTest
+@IsTest(IsParallel=true)
 public class Test_PatientDelegateService {
 
     // Define test objects: --------------------------------------------------------------------------------------------
