--- a/unpackaged/main/default/classes/CommunitiesSelfRegControllerTest.cls
+++ b/unpackaged/main/default/classes/CommunitiesSelfRegControllerTest.cls
@@ -1,8 +1,9 @@
 /**
  * An apex page controller that supports self registration of users in communities that allow self registration
  */
-@IsTest public with sharing class CommunitiesSelfRegControllerTest {
-    @IsTest(SeeAllData=true) 
+@IsTest(IsParallel=true)
+public with sharing class CommunitiesSelfRegControllerTest {
+
     public static void testCommunitiesSelfRegController() {
         CommunitiesSelfRegController controller = new CommunitiesSelfRegController();
         controller.firstName = 'FirstName';
