--- a/unpackaged/main/default/classes/LightningSelfRegisterControllerTest.cls
+++ b/unpackaged/main/default/classes/LightningSelfRegisterControllerTest.cls
@@ -1,4 +1,4 @@
-@IsTest(SeeAllData = true)
+@IsTest(IsParallel=true)
 public with sharing class LightningSelfRegisterControllerTest {
 
  /* Verifies that IsValidPassword method with various password combinations. */
