Delegates And Templates fix

--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -227,7 +227,8 @@ public without sharing class CommunityService {
                         userCommunity_ShowTour__c,
                         Last_Session_Id__c,
                         MailingLatitude,
-                        MailingLongitude
+                        MailingLongitude,
+                        Account.BillingCountry
                 FROM Contact
                 WHERE Id = :contactId
         ];
